responsive desing las flores del headear

--- a/memo-pri-wedding/src/components/Header.astro
+++ b/memo-pri-wedding/src/components/Header.astro
@@ -35,7 +35,7 @@
   <img
     src="/images/florcitas_header.png"
     alt="Florcitas decorativas"
-    class="absolute bottom-0 right-4 h-48 w-auto"
+    class="absolute bottom-0 right-4 h-32 sm:h-40 md:h-48 w-auto z-0"
   />
 
 </section>
