--- a/memo-pri-wedding/src/components/Header.astro
+++ b/memo-pri-wedding/src/components/Header.astro
@@ -2,7 +2,7 @@
 // Puedes pasar props si necesitas personalizar el header
 ---
 
-<section id="header" class="relative min-h-screen text-center">
+<section id="header" class="relative min-h-[100svh] text-center">
   
   <div class="absolute inset-x-0 top-36 bottom-48 z-10 flex flex-col justify-center items-center px-4">
     
@@ -35,7 +35,7 @@
   <img
     src="/images/florcitas_header.png"
     alt="Florcitas decorativas"
-    class="absolute bottom-0 right-4 h-32 sm:h-40 md:h-48 w-auto z-0"
+    class="absolute bottom-0 right-4 h-[30vh] w-auto z-0"
   />
 
 </section>
