update navbar height for improved responsiveness

--- a/memo-pri-wedding/src/components/Header.astro
+++ b/memo-pri-wedding/src/components/Header.astro
@@ -6,7 +6,7 @@
   
   <div class="absolute inset-x-0 top-36 bottom-48 z-10 flex flex-col justify-center items-center px-4">
     
-    <p class="font-lichtner text-sm md:text-base mb-2 uppercase tracking-widest">
+    <p class="font-lichtner text-xl md:text-2xl mb-2 uppercase tracking-widest">
       • NOS CASAMOS •
     </p>
 
@@ -20,7 +20,7 @@
     </div>
     
     <div class="my-1">
-      <p class="font-lichtner text-lg md:text-xl uppercase">
+      <p class="font-lichtner text-2xl md:text-3xl uppercase">
         20 de diciembre 2025
       </p>
     </div>
