--- a/memo-pri-wedding/src/components/NavBar.astro
+++ b/memo-pri-wedding/src/components/NavBar.astro
@@ -37,7 +37,7 @@ const navItems = [
 
       <!-- Mobile Menu Button -->
       <div class="-mr-2 flex">
-        <button id="menu-toggle" class="text-white hover:text-blue-medium focus:outline-none p-2 -mr-2">
+        <button id="menu-toggle" class="text-white hover:text-blue-medium focus:outline-none focus:ring-0 p-2 -mr-2">
           <svg class="h-10 w-10" stroke="currentColor" fill="none" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
           </svg>
