--- a/memo-pri-wedding/src/components/SaveTheDate.astro
+++ b/memo-pri-wedding/src/components/SaveTheDate.astro
@@ -73,7 +73,7 @@ const churchGoogleMapsLink = "https://maps.google.com/?q=San+Francisco+Solano+So
         </address>
         <!-- Google Maps Link -->
         <a href={churchGoogleMapsLink} target="_blank" rel="noopener noreferrer"
-           class="inline-block mt-4 px-6 py-2 rounded-full bg-white text-[#004AAD] border border-[#004AAD] text-sm hover:bg-[#004AAD] hover:text-white transition-colors duration-300 focus:outline-none focus:ring-0 [-webkit-tap-highlight-color:transparent]">
+           class="inline-block mt-4 px-6 py-2 rounded-full bg-white text-[#004AAD] border border-[#004AAD] text-sm hover:bg-[#004AAD] hover:text-white transition-colors duration-300 focus:outline-none focus:ring-0 [-webkit-tap-highlight-color:transparent] active:bg-white active:text-[#004AAD] active:duration-0">
            Ver en Google Maps
         </a>
       </div>
@@ -101,7 +101,7 @@ const churchGoogleMapsLink = "https://maps.google.com/?q=San+Francisco+Solano+So
         </address>
         <!-- Party Google Maps Link -->
         <a href={partyGoogleMapsLink} target="_blank" rel="noopener noreferrer"
-           class="inline-block mt-4 px-6 py-2 rounded-full bg-white text-[#004AAD] border border-[#004AAD] text-sm hover:bg-[#004AAD] hover:text-white transition-colors duration-300 focus:outline-none focus:ring-0 [-webkit-tap-highlight-color:transparent]">
+           class="inline-block mt-4 px-6 py-2 rounded-full bg-white text-[#004AAD] border border-[#004AAD] text-sm hover:bg-[#004AAD] hover:text-white transition-colors duration-300 focus:outline-none focus:ring-0 [-webkit-tap-highlight-color:transparent] active:bg-white active:text-[#004AAD] active:duration-0">
            Ver en Google Maps
         </a>
       </div>
