Remove unused Sagrada Familia image and update Header and NavBar components for improved responsiveness and styling.

--- a/memo-pri-wedding/src/components/Header.astro
+++ b/memo-pri-wedding/src/components/Header.astro
@@ -6,7 +6,7 @@
   
   <div class="absolute inset-x-0 top-36 bottom-48 z-10 flex flex-col justify-center items-center px-4">
     
-    <p class="font-lichtner text-xl md:text-2xl mb-2 uppercase tracking-widest">
+    <p class="font-lichtner text-xl md:text-4xl mb-2 uppercase tracking-widest">
       • NOS CASAMOS •
     </p>
 
@@ -15,12 +15,12 @@
       <img 
         src="/images/priscila_y_manuel_blue.png" 
         alt="Priscila y Manuel" 
-        class="inline-block h-28 md:h-36" 
+        class="inline-block h-28 md:h-56" 
       />
     </div>
     
     <div class="my-1">
-      <p class="font-lichtner text-2xl md:text-3xl uppercase">
+      <p class="font-lichtner text-2xl md:text-5xl uppercase">
         20 de diciembre 2025
       </p>
     </div>
@@ -35,7 +35,7 @@
   <img
     src="/images/florcitas_header.png"
     alt="Florcitas decorativas"
-    class="absolute bottom-0 right-4 h-[30vh] w-auto z-0"
+    class="absolute bottom-0 right-4 h-[30vh] md:h-[45vh] md:right-8 w-auto z-0"
   />
 
 </section>
@@ -54,8 +54,8 @@
   }
 
   #header {
-    background-color: white; /* Apply white background */
-    /* background-image: url('/images/cardboard-texture.png'); */ /* Remove background image */
+    /* background-color: white; */ /* Apply white background */
+    background-image: url('/images/cardboard-texture.png'); /* Remove background image */
     background-size: cover; /* Keep or remove based on design needs */
     background-position: center; /* Keep or remove based on design needs */
     color: #004AAD;
