Updated Header component layout by adjusting positioning and image sizes for better visual balance, including a new image with modified dimensions.

--- a/memo-pri-wedding/src/components/Header.astro
+++ b/memo-pri-wedding/src/components/Header.astro
@@ -4,18 +4,18 @@
 
 <section id="header" class="relative min-h-[100svh] text-center">
   
-  <div class="absolute inset-x-0 top-32 bottom-48 z-10 flex flex-col justify-center items-center px-4">
+  <div class="absolute inset-x-0 top-28 bottom-48 z-10 flex flex-col justify-center items-center px-4">
     
-    <p class="font-lichtner text-xl md:text-4xl mb-2 uppercase tracking-widest">
+    <p class="font-lichtner text-xl md:text-4xl uppercase tracking-widest">
       • NOS CASAMOS •
     </p>
 
     <!-- Remplazar el H1 con la imagen -->
-    <div class="text-center mb-1">
+    <div class="text-center mb-1 mt-2">
       <img 
         src="/images/priscila_y_manuel_blue.png" 
         alt="Priscila y Manuel" 
-        class="inline-block h-28 md:h-56" 
+        class="inline-block h-36 md:h-64" 
       />
     </div>
     
